2001-07-19  Adam Fedor  <fedor@gnu.org>

	* Documentation/readme.texi: Explain the license for GNUstep more
	clearly.
	* README: Regen.

Thu Jul 19 12:41:22 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* config/config.objc.m: New file.
	* configure.in: Added new test to check whether Objective-C really
	works.  If it doesn't, abort immediately telling the user to fix
	their compiler installation first.
	(AC_CHECK_HEADERS): Don't check for libguile.h
	* configure: Regenerated.
	
2001-07-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Removed bogus tests for character zero in 
	string conversion functions ... OpenStep strings are not nul
	terminated, so the code terminated conversions prematurely.

Tue Jul 17 15:00:52 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Makefile.postamble (after-distclean): Depend on
	remove-header-links; do not remove links here.
	(remove-header-links): New target removing header links; different
	implementation on mingw32 and on non-migw32.  Do not remove
	Source/Foundation.
	(.PHONY): Added, with header-links and remove-header-links.

2001-07-16  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: New definitions for sel
	functions, rearrange some things.
	* Headers/gnustep/base/objc-load.h: Change category type for 
	compatibility with NeXT.
	* Source/objc-load.m: Likewise.

	* Source/GSCompatibility.m (+defaultsChanged:): Typo in method name.

2001-07-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Finish off and enable XML property list code
	* Source/GSCompatibility.m: ditto

2001-07-16  Adam Fedor  <fedor@gnu.org>

	* Source/NSUserDefaults.m ([NSUserDefaults +userLanguages]): Put
	MINGW languages in array (Fix from "Michael Scheibler"
	<michael.scheibler@onevision.de>).

2001-07-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Added ([writeToURL:atomically:]) for
	MacOS-X compatibility
	* Source/NSDictionary.m: ditto
